Update tests and property documentation
Modify test methods and assertions in ConvertToZTDFTest to use package-private visibility and improve assertion clarity. Enhance Javadocs for ConvertToZTDF, AbstractTDFProcessor, and related classes, including property descriptors and methods to improve code readability and maintainability.